--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # for HTTP requests
   requests: ^3.0.3
+
+  # for the loading page
+  flutter_spinkit: "^3.1.0"
 
 dev_dependencies:
   flutter_test:
